fix(coral): Add isolation rule to Layout, remove superfluous z-index

--- a/coral/src/app/components/Modal.module.css
+++ b/coral/src/app/components/Modal.module.css
@@ -4,7 +4,6 @@
   height: 100vh;
   width: 100%;
   background-color: rgba(48, 55, 94, 0.7);
-  z-index: 2;
 }
 
 .modalTextBlock {
